# python-onig

./: .gitignore  .gitlab-ci.yml  README.rst  appveyor.yml  build.py  pyproject.toml
helpers/: appveyor-deploy-pypi.ps1  ci-build-manylinux-wheels.sh  fix-poetry-tags.py
onig/: __init__.py  _encoding.py  match.py  pattern.py
onig/_onig_cffi/: __init__.py  build.py  definitions.c  source.c
