[tool.poetry]
name = "onig"
version = "0.0.5"
description = "A Python wrapper around the Oniguruma regular expression library."
authors = [
    "Maximilian Köhl <mkoehl@cs.uni-saarland.de>"
]
license = "MIT"
readme = "README.rst"
repository = "https://dgit.cs.uni-saarland.de/koehlma/onig"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent"
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
cffi = "^1.14.0"
unibuf = { version = "^0.1.1", markers = "implementation_name == 'cpython'" }

[tool.poetry.dev-dependencies]
black = { version = "^19.10b0", allow-prereleases = true }
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.2"
pep8-naming = "^0.9.1"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
